cambios en primera celda train

--- a/obligatorio_2025/Obligatorio-letra.ipynb
+++ b/obligatorio_2025/Obligatorio-letra.ipynb
@@ -834,84 +834,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef dice_coef(preds, targets, eps=1e-7):\\n\\n    preds = torch.sigmoid(preds)\\n    preds = (preds > 0.5).float()\\n\\n    preds = preds.view(preds.size(0), -1)\\n    targets = targets.view(targets.size(0), -1)\\n\\n    intersection = (preds * targets).sum(dim=1)\\n    union = preds.sum(dim=1) + targets.sum(dim=1)\\n\\n    dice = (2 * intersection + eps) / (union + eps)\\n    return dice.mean().item()\\n\\n\\ndef train_one_epoch(model, loader, optimizer, criterion, device):\\n    model.train()\\n    running_loss = 0.0\\n    running_dice = 0.0\\n    n_batches = 0\\n\\n    for imgs, masks in loader:\\n        imgs = imgs.to(device)\\n        masks = masks.to(device)\\n\\n        optimizer.zero_grad()\\n        outputs = model(imgs)\\n        loss = criterion(outputs, masks)\\n        loss.backward()\\n        optimizer.step()\\n\\n        running_loss += loss.item()\\n        running_dice += dice_coef(outputs.detach(), masks.detach())\\n        n_batches += 1\\n\\n    return running_loss / n_batches, running_dice / n_batches\\n\\n\\ndef validate(model, loader, criterion, device):\\n    model.eval()\\n    running_loss = 0.0\\n    running_dice = 0.0\\n    n_batches = 0\\n\\n    with torch.no_grad():\\n        for imgs, masks in loader:\\n            imgs = imgs.to(device)\\n            masks = masks.to(device)\\n\\n            outputs = model(imgs)\\n            loss = criterion(outputs, masks)\\n\\n            running_loss += loss.item()\\n            running_dice += dice_coef(outputs, masks)\\n            n_batches += 1\\n\\n    return running_loss / n_batches, running_dice / n_batches\\n'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "def dice_coef(preds, targets, eps=1e-7):\n",
-    "\n",
-    "    preds = torch.sigmoid(preds)\n",
-    "    preds = (preds > 0.5).float()\n",
-    "\n",
-    "    preds = preds.view(preds.size(0), -1)\n",
-    "    targets = targets.view(targets.size(0), -1)\n",
-    "\n",
-    "    intersection = (preds * targets).sum(dim=1)\n",
-    "    union = preds.sum(dim=1) + targets.sum(dim=1)\n",
-    "\n",
-    "    dice = (2 * intersection + eps) / (union + eps)\n",
-    "    return dice.mean().item()\n",
-    "\n",
-    "\n",
-    "def train_one_epoch(model, loader, optimizer, criterion, device):\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "    running_dice = 0.0\n",
-    "    n_batches = 0\n",
-    "\n",
-    "    for imgs, masks in loader:\n",
-    "        imgs = imgs.to(device)\n",
-    "        masks = masks.to(device)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(imgs)\n",
-    "        loss = criterion(outputs, masks)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        running_loss += loss.item()\n",
-    "        running_dice += dice_coef(outputs.detach(), masks.detach())\n",
-    "        n_batches += 1\n",
-    "\n",
-    "    return running_loss / n_batches, running_dice / n_batches\n",
-    "\n",
-    "\n",
-    "def validate(model, loader, criterion, device):\n",
-    "    model.eval()\n",
-    "    running_loss = 0.0\n",
-    "    running_dice = 0.0\n",
-    "    n_batches = 0\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for imgs, masks in loader:\n",
-    "            imgs = imgs.to(device)\n",
-    "            masks = masks.to(device)\n",
-    "\n",
-    "            outputs = model(imgs)\n",
-    "            loss = criterion(outputs, masks)\n",
-    "\n",
-    "            running_loss += loss.item()\n",
-    "            running_dice += dice_coef(outputs, masks)\n",
-    "            n_batches += 1\n",
-    "\n",
-    "    return running_loss / n_batches, running_dice / n_batches\n",
-    "\"\"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -977,7 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizar_predicciones(model, val_loader, device, \"best_unet.pth_1\", n_show=4)"
+    "visualizar_predicciones(model, val_loader, device, \"best_unet_1.pth\", n_show=4)"
    ]
   },
   {
@@ -1233,7 +1155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizar_predicciones(model, val_loader, device, \"best_unet.pth_2\", n_show=4)"
+    "visualizar_predicciones(model, val_loader, device, \"best_unet_2.pth\", n_show=4)"
    ]
   },
   {
@@ -1319,7 +1241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizar_predicciones(model, val_loader, device, \"best_unet.pth_3\", n_show=4)"
+    "visualizar_predicciones(model, val_loader, device, \"best_unet_3.pth\", n_show=4)"
    ]
   },
   {
@@ -1376,7 +1298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizar_predicciones(model, val_loader, device, \"best_unet.pth_4\", n_show=4)"
+    "visualizar_predicciones(model, val_loader, device, \"best_unet_4.pth\", n_show=4)"
    ]
   },
   {
